--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,7 @@
 				</executions>
 				<configuration>
 				<processTypes>
-					<web>java $JAVA_OPTS -cp target/classes:target/dependency/* ExecuteMain</web>
+					<web>java $JAVA_OPTS -cp target/*:target/dependency/* ExecuteMain</web>
 				</processTypes>
 				</configuration>
 			</plugin>
