--- a/pom.xml
+++ b/pom.xml
@@ -25,36 +25,14 @@
 		<finalName>RESTfulExample</finalName>
 		<plugins>
 			<plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.3</version>
-                <configuration>
-                    <descriptor>src/main/assembly/assembly.xml</descriptor>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <configuration>
-                            <archive>
-                                <manifest>
-                                    <mainClass>com.mkyong.rest.ExecuteMain</mainClass>
-                                </manifest>
-                            </archive>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.0</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
+            			<groupId>org.apache.maven.plugins</groupId>
+            			<artifactId>maven-compiler-plugin</artifactId>
+            			<version>3.5.1</version>
+            			<configuration>
+               		        	<source>1.8</source>
+             		        	<target>1.8</target>
+           		        </configuration>
+       		       </plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.0.1</version>
