--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,13 @@
 		<finalName>RESTfulExample</finalName>
 		<plugins>
 			<plugin>
-            			<groupId>org.apache.maven.plugins</groupId>
-            			<artifactId>maven-compiler-plugin</artifactId>
-            			<version>3.5.1</version>
-            			<configuration>
-               		        	<source>1.8</source>
-             		        	<target>1.8</target>
-           		        </configuration>
-       		       </plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.7.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
 				<version>3.0.1</version>
@@ -63,7 +62,7 @@
 					<stopPort>1234</stopPort>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!-- <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
@@ -72,7 +71,7 @@
 						<suiteXmlFile>FeatureExecuteFile.xml</suiteXmlFile>
 					</suiteXmlFiles>
 				</configuration>
-			</plugin>
+			</plugin> -->
 			<!--  for api execution -->
 			<plugin>
 				<groupId>com.heroku.sdk</groupId>
@@ -92,7 +91,7 @@
 				</executions>
 				<configuration>
 				<processTypes>
-					<web>java $JAVA_OPTS -cp target/*:target/dependency/* ExecuteMain</web>
+					<web>java $JAVA_OPTS -cp target/classes:target/dependency/* ExecuteMain</web>
 				</processTypes>
 				</configuration>
 			</plugin>
@@ -183,34 +182,6 @@
 			<version>38.0.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>enterprise</groupId>
-			<artifactId>enterprise</artifactId>
-			<version>1.0</version>
-			<systemPath>${project.basedir}/lib/enterprise-1.0.jar</systemPath>
-			<scope>system</scope>
-		</dependency>
-		<dependency>
-			<groupId>partner</groupId>
-			<artifactId>partner</artifactId>
-			<version>1.0</version>
-			<systemPath>${project.basedir}/lib/partner-1.0.jar</systemPath>
-			<scope>system</scope>
-		</dependency>
-		<dependency>
-			<groupId>apex</groupId>
-			<artifactId>apex</artifactId>
-			<version>1.0</version>
-			<systemPath>${project.basedir}/lib/apex-1.0.jar</systemPath>
-			<scope>system</scope>
-		</dependency>
-		<dependency>
-			<groupId>UITestAutomation</groupId>
-			<artifactId>UITestAutomaiton</artifactId>
-			<version>2.1.19</version>
-			<systemPath>${project.basedir}/lib/UITestAutomation-2.1.19.jar</systemPath>
-			<scope>system</scope>
-		</dependency>
 		<dependency>
 			<groupId>net.rcarz</groupId>
 			<artifactId>jira-client</artifactId>
